infra/k8s/prod/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
