infra/k8s/prod/yolo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: yolo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
